[gd_scene load_steps=21 format=3 uid="uid://c107tqfu3p6ql"]

[ext_resource type="Script" path="res://scene/scripts/Scene10.gd" id="1_bvd26"]
[ext_resource type="FontFile" uid="uid://jc05yg18thbh" path="res://scene/scripts/Retro Gaming.ttf" id="2_41ffj"]
[ext_resource type="Texture2D" uid="uid://4lhu1tjljdy2" path="res://Player/toha.png" id="3_iawd3"]
[ext_resource type="Texture2D" uid="uid://c0c7n2wexicv5" path="res://Player/$Spritesheet%(8).png" id="4_ye10o"]
[ext_resource type="Texture2D" uid="uid://c1gb7x7lb86wm" path="res://Player/Abdul.png" id="5_pb0wo"]
[ext_resource type="Texture2D" uid="uid://h5bxhqfyl10t" path="res://World/Scene10.jpg" id="6_gtlo6"]
[ext_resource type="AudioStream" uid="uid://cvkx343ygajqb" path="res://World/music/Fire.mp3" id="7_8hrdq"]
[ext_resource type="AudioStream" uid="uid://b3bvrbaipmblb" path="res://World/music/Typewrite.mp3" id="8_d2fp8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kef03"]
size = Vector2(205, 149.75)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3of4k"]
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="Animation" id="Animation_eb0nq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text2:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ColorRect/RichTextLabel:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ColorRect/Label:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_4l6ao"]
resource_name = "fill1"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ColorRect/RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_pvt0j"]
resource_name = "fill2"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ColorRect/Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_ygt1m"]
resource_name = "show"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text2:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_3lvel"]
resource_name = "show2"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text2:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2gye6"]
_data = {
"RESET": SubResource("Animation_eb0nq"),
"fill1": SubResource("Animation_4l6ao"),
"fill2": SubResource("Animation_pvt0j"),
"show": SubResource("Animation_ygt1m"),
"show2": SubResource("Animation_3lvel")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdovo"]
draw_center = false

[sub_resource type="Animation" id="Animation_1405x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ea7s1"]
resource_name = "out"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l3p8k"]
_data = {
"RESET": SubResource("Animation_1405x"),
"out": SubResource("Animation_ea7s1")
}

[node name="Scene10" type="Node"]
script = ExtResource("1_bvd26")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="ColorRect"]
z_index = 2
layout_mode = 0
offset_left = 418.0
offset_top = 346.0
offset_right = 971.0
offset_bottom = 453.0
theme_override_fonts/font = ExtResource("2_41ffj")
text = "melihat kota yang terbakar"
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 0
offset_left = 306.0
offset_top = 209.0
offset_right = 1281.0
offset_bottom = 437.0
theme_override_fonts/normal_font = ExtResource("2_41ffj")
theme_override_font_sizes/normal_font_size = 64
text = "Puncak Bukit
"

[node name="Player2" type="CharacterBody2D" parent="."]
visibility_layer = 2
position = Vector2(300, 1012)

[node name="Toha" type="Sprite2D" parent="Player2"]
position = Vector2(-108, -698)
scale = Vector2(4.82792, 4.82792)
texture = ExtResource("3_iawd3")
hframes = 8
vframes = 4
frame = 17

[node name="$spritesheet_(8)" type="Sprite2D" parent="Player2"]
visible = false
position = Vector2(-106, -721)
scale = Vector2(4.85714, 4.85714)
texture = ExtResource("4_ye10o")
hframes = 8
vframes = 4
frame = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2(-105, -627)
shape = SubResource("RectangleShape2D_kef03")

[node name="Player" type="CharacterBody2D" parent="."]
visibility_layer = 2
position = Vector2(150, 506)

[node name="Abdul2" type="Sprite2D" parent="Player"]
position = Vector2(876, -199)
scale = Vector2(4.35848, 4.35848)
texture = ExtResource("5_pb0wo")
hframes = 8
vframes = 4
frame = 11

[node name="Abdul" type="Sprite2D" parent="Player"]
position = Vector2(771, -192)
scale = Vector2(4.6768, 4.6768)
texture = ExtResource("5_pb0wo")
hframes = 8
vframes = 4
frame = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(795, -100)
shape = SubResource("RectangleShape2D_kef03")

[node name="Container" type="Container" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Scene10" type="Sprite2D" parent="Container"]
z_index = -1
position = Vector2(584, 72.0001)
scale = Vector2(5.47382, 4.76582)
texture = ExtResource("6_gtlo6")

[node name="Scene10" type="Sprite2D" parent="Container/Scene10"]
z_index = -2
position = Vector2(12.6055, 128.834)
scale = Vector2(1.29534, 0.753209)
texture = ExtResource("6_gtlo6")

[node name="TextBoxPanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -224.0
offset_right = -28.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3of4k")
metadata/_edit_lock_ = true

[node name="TextAni" type="AnimationPlayer" parent="TextBoxPanel"]
libraries = {
"": SubResource("AnimationLibrary_2gye6")
}

[node name="Text" type="Label" parent="TextBoxPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 19.0
offset_right = 1072.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("2_41ffj")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_rdovo")
text = "Penduduk:
\"Kita telah membakar kota ini, tapi semangat kita tidak akan pernah padam.\""
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0
text_direction = 1

[node name="Text2" type="Label" parent="TextBoxPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 19.0
offset_right = 1072.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("2_41ffj")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_rdovo")
text = "Pemimpin Perlawanan: 
\"Ini bukan akhir, tapi awal dari perjuangan baru. Bandung akan selalu menjadi lautan api yang menginspirasi.\""
autowrap_mode = 3
text_direction = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
libraries = {
"": SubResource("AnimationLibrary_l3p8k")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8hrdq")
volume_db = -32.13
pitch_scale = 0.74

[node name="Typewriter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_d2fp8")
volume_db = 1.691
